--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,15 +6,24 @@
     <string name="icon_frais_hf">Icone pour les frais hors forfait</string>
     <string name="icon_recap_frais_hf">Icone pour le récapitulatif des frais hors forfait</string>
     <string name="icon_frais_km">Icone pour les frais kilométriques</string>
+    <string name="icon_frais_nuitees">Icone pour les frais de nuitées</string>
+    <string name="icon_frais_repas">Icone pour les frais de repas</string>
+    <string name="icon_frais_étapes">Icone pour les frais d\'étapes</string>
     <string name="euro">€</string>
     <string name="ajouter">Ajouter</string>
     <string name="km">Km</string>
+    <string name="nuitee">nuitées</string>
+    <string name="repas">repas</string>
+    <string name="étapes">étapes</string>
     <string name="plus">+</string>
     <string name="moins">-</string>
     <string name="valider">Valider</string>
     <string name="deux_points">:</string>
     <string name="title_frais_km">Frais kilométriques</string>
     <string name="title_frais_hf">Frais hors forfait</string>
+    <string name="title_frais_nuitees">Frais de nuitées</string>
+    <string name="title_frais_etapes">Frais d\'étapes</string>
+    <string name="title_frais_repas">Frais de repas</string>
     <string name="motif">Motif :</string>
     <string name="montant">Montant :</string>
     <string name="icone_frais_km">Icone des frais kilométriques</string>
